message ImportedMessage {
    optional bool i = 1;
}
